Refactor `Gin` class: enhance anti-clique controls, refine orientation logic with `orientByIndependenceFast`, and introduce configuration presets for balancing conservatism and exploration.